objects/CommandCenter__Manual_steps_tracker__c.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__Component__c</fullName>
        <description>Salesforce Components - VF, Apex classes, objects etc</description>
        <inlineHelpText>Salesforce Components - VF, Apex classes, objects etc</inlineHelpText>
        <label>Component</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate whether the manual step is default for all releases or it is for specific release.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Step_Type__c</fullName>
        <defaultValue>&apos;Other&apos;</defaultValue>
        <label>Step Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assign Permission Sets</fullName>
                </value>
                <value>
                    <fullName>Create Custom Settings</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Update Flow</fullName>
                    <isActive>false</isActive>
                    <label>Update Flow</label>
                </value>
                <value>
                    <fullName>Update Schedule Class</fullName>
                    <isActive>false</isActive>
                    <label>Update Schedule Class</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__Steps_to_perform__c</fullName>
        <description>Steps to be performed - like deactivation of trigger, validation rule etc</description>
        <inlineHelpText>Steps to be performed - like deactivation of trigger, validation rule etc</inlineHelpText>
        <label>Steps to perform</label>
        <type>TextArea</type>
    </fields>
    <label>Manual Steps Tracker</label>
    <listViews>
        <fullName>CommandCenter__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Manual steps-{0000}</displayFormat>
        <label>Manual steps tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Steps Tracker</pluralLabel>
    <recordTypes>
        <fullName>CommandCenter__PostDeploy</fullName>
        <active>true</active>
        <label>PostDeploy</label>
    </recordTypes>
    <recordTypes>
        <fullName>CommandCenter__PreDeploy</fullName>
        <active>true</active>
        <description>Record for the Predeployment</description>
        <label>PreDeploy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>